--- a/Angular-15_MicroFrontend_eCommerce_Starter/projects/shell/src/app/app.component.html
+++ b/Angular-15_MicroFrontend_eCommerce_Starter/projects/shell/src/app/app.component.html
@@ -10,6 +10,7 @@
 			<a routerLink="login"     (click)="clickHandler()" routerLinkActive="active">Login</a>
 			<a routerLink="sign-up"   (click)="clickHandler()" routerLinkActive="active">Sign Up</a>
 			<a routerLink="contact"   (click)="clickHandler()" routerLinkActive="active">Contact</a>
+       <a routerLink="admin"   (click)="clickHandler()" routerLinkActive="active">Admin</a>
 		</nav>
 	</mat-sidenav>
 
@@ -24,6 +25,7 @@
           <a routerLink="login"   routerLinkActive="active">Login</a>
           <a routerLink="sign-up" routerLinkActive="active">Sign Up</a>
           <a routerLink="contact" routerLinkActive="active">Contact</a>
+          <a routerLink="admin" routerLinkActive="active">Admin</a>
         </nav>
       </header>
 		</mat-toolbar>
