--- a/Angular-15_MicroFrontend_eCommerce_Starter/projects/products/src/app/product/product.component.html
+++ b/Angular-15_MicroFrontend_eCommerce_Starter/projects/products/src/app/product/product.component.html
@@ -1,2 +1,3 @@
-<a [routerLink]="[ '/products' ]" routerLinkActive="active">Products</a><br>
+<a [routerLink]="[ '/products' ]" routerLinkActive="active">Product</a><br>
 <a [routerLink]="[ '/product-detail' ]" routerLinkActive="active">Detail</a>
+<router-outlet></router-outlet>
