--- a/Angular-15_MicroFrontend_eCommerce_Starter/projects/shell/src/app/app.component.html
+++ b/Angular-15_MicroFrontend_eCommerce_Starter/projects/shell/src/app/app.component.html
@@ -2,14 +2,13 @@
 <mat-sidenav-container>
 
 	<mat-sidenav #sidenav mode="over">
-		<label>My Application</label>
+		<label>My App</label>
     <hr/>
 		<nav>
-			<a routerLink="home"      (click)="clickHandler()" routerLinkActive="active">Home</a>
+			<a routerLink=""      (click)="clickHandler()" routerLinkActive="active">Home</a>
 			<a routerLink="about"     (click)="clickHandler()" routerLinkActive="active">About</a>
 			<a routerLink="login"     (click)="clickHandler()" routerLinkActive="active">Login</a>
 			<a routerLink="sign-up"   (click)="clickHandler()" routerLinkActive="active">Sign Up</a>
-			<a routerLink="contact"   (click)="clickHandler()" routerLinkActive="active">Contact</a>
        <a routerLink="admin"   (click)="clickHandler()" routerLinkActive="active">Admin</a>
 		</nav>
 	</mat-sidenav>
@@ -20,7 +19,7 @@
 				<mat-icon (click)="sidenav.toggle()">menu</mat-icon>
 				<label>My Application</label>
         <nav>
-          <a routerLink="home"    routerLinkActive="active">Home</a>
+          <a routerLink=""    routerLinkActive="active">Home</a>
           <a routerLink="about"   routerLinkActive="active">About</a>
           <a routerLink="login"   routerLinkActive="active">Login</a>
           <a routerLink="sign-up" routerLinkActive="active">Sign Up</a>
